accepted or engaged offer will not delete accepted offer update with js

--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -50,6 +50,8 @@
               <span class="text-success">Running Campaign</span>
           <% elsif offer.denied? %>
               <span class="text-danger">Offer denied</span>
+          <% elsif offer.deleted_by_influencer? %>
+              <span class="text-danger">Offer deleted</span>
           <% else  %>
               Pending request
           <% end %>
