--- a/app/views/offers/deny.js.erb
+++ b/app/views/offers/deny.js.erb
@@ -1,5 +1,10 @@
-$('.offer-box-<%= @offer.id %>').find('.undo-deny').removeClass('hidden');
-$('.offer-box-<%= @offer.id  %>').find('.deny').addClass('hidden');
-$('.offer-box-<%= @offer.id  %>').find('.btn-accept').addClass('hidden');
 
-setTimeout(function() { $('.offer-box-<%= @offer.id %>').find('.undo-deny').addClass('hidden'); }, 10000);
+<% if @success %>
+    $('.offer-box-<%= @offer.id %>').find('.undo-deny').removeClass('hidden');
+    $('.offer-box-<%= @offer.id  %>').find('.deny').addClass('hidden');
+    $('.offer-box-<%= @offer.id  %>').find('.btn-accept').addClass('hidden');
+
+    setTimeout(function() { $('.offer-box-<%= @offer.id %>').find('.undo-deny').addClass('hidden'); }, 10000);
+<% else %>
+    deletedOfferNotice();
+<% end %>
