--- a/app/views/offers/undo_deny.js.erb
+++ b/app/views/offers/undo_deny.js.erb
@@ -3,5 +3,5 @@
     $('.offer-box-<%= @offer.id  %>').find('.deny').removeClass('hidden');
     $('.offer-box-<%= @offer.id  %>').find('.btn-accept').removeClass('hidden');
 <% else %>
-    deletedOfferNotice();
+    deletedOfferNotice(<%= @offer_id %>);
 <% end %>
