--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -44,14 +44,14 @@
 
           <% end %>
       <% else %>
-          <% if offer.accepted? %>
-              <%= link_to 'Engage', new_brand_payment_campaigns_path(offer.id), class: 'btn btn-accept button-border-blue' %>
-          <% elsif offer.engaged? %>
+          <% if offer.engaged? %>
               <span class="text-success">Running Campaign</span>
+    <% elsif offer.accepted? %>
+              <%= link_to 'Engage', new_brand_payment_campaigns_path(offer.id), class: 'btn btn-accept button-border-blue' %>
+    <% elsif offer.deleted_by_influencer? %>
+              <span class="text-danger">Offer deleted</span>
           <% elsif offer.denied? %>
               <span class="text-danger">Offer denied</span>
-          <% elsif offer.deleted_by_influencer? %>
-              <span class="text-danger">Offer deleted</span>
           <% else  %>
               Pending request
           <% end %>
