offer accept, deny, undo_deny operation backend condition with operation fail message

--- a/app/views/offers/accept.js.erb
+++ b/app/views/offers/accept.js.erb
@@ -1,5 +1,5 @@
 <% if @success %>
     $('.offer-box-<%= @offer.id %>').find('div.action').html('<span class="text-success">Accepted Campaign</span>');
 <% else %>
-    deletedOfferNotice(<%= @offer_id %>);
+    unsuccessfulOfferOperationNotice(<%= @offer_id %>, <%= @message %>);
 <% end %>
