--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -47,7 +47,7 @@
           <% if offer.engaged? %>
               <span class="text-success">Running Campaign</span>
     <% elsif offer.accepted? %>
-              <%= link_to 'Engage', new_brand_payment_campaigns_path(offer.id), class: 'btn btn-accept button-border-blue' %>
+              <%= link_to 'Engage', new_brand_payment_campaigns_path(id: offer.id), class: 'btn btn-accept button-border-blue engage' %>
     <% elsif offer.deleted_by_influencer? %>
               <span class="text-danger">Offer deleted</span>
           <% elsif offer.denied? %>
