offer accept,deny,undo_deny operational issues solve

--- a/app/views/offers/accept.js.erb
+++ b/app/views/offers/accept.js.erb
@@ -1,5 +1,6 @@
 <% if @success %>
     $('.offer-box-<%= @offer.id %>').find('div.action').html('<span class="text-success">Accepted Campaign</span>');
 <% else %>
-    unsuccessfulOfferOperationNotice(<%= @offer_id %>, <%= @message %>);
+console.log('calling unsuccessfulOfferOperationNotice');
+    unsuccessfulOfferOperationNotice('<%= @offer_id %>', '<%= @message %>');
 <% end %>
