add reset button on advance search page

--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -5,7 +5,14 @@
 <div class="brands-explore-content-wrapper">
   <div class="brands-explore-advance-search">
     <form action="<%= explores_path %>" role="form" class="vertical" method="get">
-      <div class="advanced-search">ADVANCED SEARCH</div>
+      <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-10">
+          <p>ADVANCED SEARCH</p>
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-2">
+            <a href="javascript:;" class="btn btn-success btn-reset pull-right">Reset</a>
+        </div>
+      </div>
 
       <div class="row">
         <div class="col-md-4">
