--- a/app/views/offers/_offer_body_view.erb
+++ b/app/views/offers/_offer_body_view.erb
@@ -1,6 +1,7 @@
 <div class="offer-body offer-body-<%= offer.id %> collapse">
   <div class="comment-box comment-box-<%= offer.id %>">
-    <textarea name="message-body" class="offer-textarea message-body offer-textarea-<%= offer.id %> " rows="3" placeholder="Start typing your message here"></textarea>
+    <textarea name="message-body" class="offer-textarea message-body offer-textarea-<%= offer.id %> " rows="3"
+              placeholder="Start typing your message here" maxlength="150"></textarea>
     <% if offer.accepted? %>
         <button data-offer-id='<%= offer.id %>' data-receiver-id='<%= current_user.id == offer.sender_id ? offer.receiver_id : offer.sender_id %>' class="message-reply-button btn btn-accept" type="button" >Reply</button>
     <% else %>
