--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -15,6 +15,18 @@
                     <input type="hidden" name="access_token"/>
                     <input type="hidden" name="id"/>
 
+                    <div class="js-clickable fb-activity-row-head">
+
+                         <div class="media-left media-middle"> &nbsp; </div>
+                          <div class="media-left media-middle fb-activity-post">
+                            <h4> Activity Name </h4>
+                          </div>
+                          <div class="media-right media-middle">
+                            <h4> Picture </h4>
+                          </div>
+
+                    </div>
+
                     {{#each accounts}}
                         <div class="js-clickable fb-activity-row">
 
