--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -17,7 +17,7 @@
 
                     <div class="js-clickable fb-activity-row-head">
 
-                         <div class="media-left media-middle"> &nbsp; </div>
+                         <div class="media-left media-middle head-radio-button"> &nbsp; </div>
                           <div class="media-left media-middle fb-activity-post">
                             <h4> Activity Name </h4>
                           </div>
