--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -695,24 +695,21 @@ only screen and (max-width: 1140px) {
     background-color: #ffffff;
 }
 
+.fb-activity-radio {
+    width: 5%;
+}
+
 .fb-activity-post {
-    width: 350px;
-    padding-left: 10px;
+    width: 80%;
 }
 
-.facebook-feed-content .media-middle {
-    padding-right: 15px;
-}
-
-.fb-activity-row-head .head-radio-button {
-    width:36px;
+.fb-activity-image {
+    width: 14%;
 }
 
 @media
 only screen and (max-width: 590px) {
-    .fb-activity-row-head .head-radio-button {
-        width: 18%;
-    }
+
 }
 
 @media
