--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -17,13 +17,15 @@
 
                     <div class="js-clickable fb-activity-row-head">
 
-                         <div class="media-left media-middle fb-activity-radio"> &nbsp; </div>
-                          <div class="media-left media-middle fb-activity-post">
+                         <div class="media-left media-middle fb-activity-radio">
+                           <input type="radio" class="displ">
+                         </div>
+                         <div class="media-left media-middle fb-activity-post">
                             <h4> Activity Name </h4>
-                          </div>
-                          <div class="media-right media-middle fb-activity-image">
+                         </div>
+                         <div class="media-right media-middle fb-activity-image">
                             <h4> Picture </h4>
-                          </div>
+                         </div>
 
                     </div>
 
@@ -32,11 +34,11 @@
 
                          <div class="media-left media-middle fb-activity-radio">
                             <input type="radio" class="vertical-align-middle" name="activity_id" value="{{id}}" {{#if active}}selected{{/if}}>
-                          </div>
+                         </div>
 
-                          <div class="media-left media-middle fb-activity-post">
+                         <div class="media-left media-middle fb-activity-post">
                             <h4 class="media-heading vertical-align-middle">{{story}}{{message}}</h4>
-                          </div>
+                         </div>
 
                          <div class="media-right media-middle fb-activity-image">
                             {{#if picture}}
