[Bug Fixed]: In Header padding added for responsive design

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -711,7 +711,11 @@ only screen and (max-width: 1140px) {
 
 @media
 only screen and (max-width: 590px) {
-
+    .fb-activity-row-head {
+        background-color: #eaeaea;
+        color: #666666;
+        padding-left: 22px;
+    }
 }
 
 @media
