faq page top level question show on load

--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -349,6 +349,10 @@
 </div>
 <script>
     $(function () {
+//        top level faq element show
+        $('.group-1').show();
+        $('.group-2').show();
+
         $('.panel-heading').click(function (e) {
             e.stopPropagation();
             var target = $(this).data('target');
