faq page top level question show on load

--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -5,10 +5,10 @@
   <div class="inner_bg" id="faq">
     <div class="mtop20">
       <div class="panel panel-warning">
-        <div class="panel-heading expandable" data-sub=".group-1-sub" data-target=".group-1">
+        <div class="panel-heading" data-sub=".group-1-sub">
           <h3 class="mleft20">1. User Guide for All Members</h3>
         </div>
-        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-a">
+        <div class="panel-body expandable expanded group-1 show" data-target=".group-1-a">
           <h4>a. Getting Started</h4>
         </div>
         <ul class="list-group expanded group-1-sub group-1-a closed">
@@ -35,7 +35,7 @@
               (experts) and Advice Seekers (entrepreneurs) from all over the world.</p>
           </li>
         </ul>
-        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-b">
+        <div class="panel-body expandable expanded closed show" data-target=".group-1-b">
           <h4>b. Profile &amp; Account Settings - General Questions</h4>
         </div>
         <ul class="list-group expanded group-1-sub group-1-b closed">
@@ -110,7 +110,7 @@
             </p>
           </li>
         </ul>
-        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-c">
+        <div class="panel-body expandable expanded closed show" data-target=".group-1-c">
           <h4>c. Privacy &amp; Security</h4>
         </div>
         <ul class="list-group expanded group-1-sub group-1-c closed">
@@ -135,10 +135,10 @@
               Takeoff platform.</p>
           </li>
         </ul>
-        <div class="panel-heading expandable" data-sub=".group-2-sub" data-target=".group-2">
+        <div class="panel-heading" data-sub=".group-2-sub" >
           <h3 class="mleft20">2. A guide for all Advice Seekers (Entrepreneurs)</h3>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-a">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-a">
           <h4>a. How does Takeoff work?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-a closed">
@@ -210,7 +210,7 @@
             </p>
           </li>
         </ul>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-b">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-b">
           <h4>b. How do I search for a Pilot?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-b closed">
@@ -219,7 +219,7 @@
             using the advanced search options. View their profiles to see their work
             experience and area of expertise.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-c">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-c">
           <h4>c. Why am I not able to find a pilot most suited to my requirements?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-c closed">
@@ -229,7 +229,7 @@
             based on their expertise, fees, time, availability, location etc. This
             will help you find a pilot most suited to your needs.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-d">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-d">
           <h4>d. Why do different pilots have different rates on Takeoff?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-d closed">
@@ -237,7 +237,7 @@
             is best. We have a wide range of Pilots with various pricing rates.
             Select the one most suited to your budget and expertise requirements.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-e">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-e">
           <h4>e. How do I request a call from the Pilot selected?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-e closed">
@@ -257,7 +257,7 @@
               balance in your account.</em>
           </p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-f">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-f">
           <h4>f. How does the call happen?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-f closed">
@@ -274,14 +274,14 @@
               the scheduled time.</em>
           </p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-g">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-g">
           <h4>g. Can I schedule multiple calls with the same expert?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-g closed">
           <p>Absolutely! If you have found the advice to be helpful and practical,
             there is a lot of value to follow up calls and continued mentoring.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-h">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-h">
           <h4>h. What should I do before my call?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-h closed">
@@ -296,7 +296,7 @@
             frame provided both parties are in agreement. You will be charged for
             the continuation of the call, so plan accordingly.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-i">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-i">
           <h4>i. Can others join my call?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-i closed">
@@ -306,7 +306,7 @@
             conference calling yet. We will let you know if and when we introduce
             that feature on our platform.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-j">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-j">
           <h4>j. Can I pitch investors on Takeoff?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-j closed">
@@ -314,7 +314,7 @@
             forms of networking and if you wish to pitch investors for any of the
             amazing ideas you have, we say go for it!</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-k">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-k">
           <h4>k. How do payments work on Takeoff?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-k closed">
@@ -324,7 +324,7 @@
             prompt you to add money to your account. Payment will be taken from your
             account only after the call is complete.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-l">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-l">
           <h4>l. What methods of payment do you accept?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-l closed">
@@ -333,7 +333,7 @@
             <a target="_blank" href="http://www.citruspay.com/">click here.</a>
           </p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-m">
+        <div class="panel-body expandable expanded group-2 closed show" data-target=".group-2-m">
           <h4>m. How do I view all transactions?</h4>
         </div>
         <div class="panel-body expanded group-2-sub group-2-m closed">
@@ -349,10 +349,6 @@
 </div>
 <script>
     $(function () {
-//        top level faq element show
-        $('.group-1').show();
-        $('.group-2').show();
-
         $('.panel-heading').click(function (e) {
             e.stopPropagation();
             var target = $(this).data('target');
