add Facebook Account name to campaign request first message
add title to password edit and new page

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<% title 'Password Reset' %>
+
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper">
   <h2>Forgot your password?</h2>
 
