--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,5 @@
+<% title 'Password Reset' %>
+
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper">
   <h2>Change your password</h2>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), data: {:'parsley-validate' => ''},html: {method: :put}) do |f| %>
