--- a/app/assets/stylesheets/profile-image-upload.css
+++ b/app/assets/stylesheets/profile-image-upload.css
@@ -1,9 +1,3 @@
-.modal-dialog {
-    padding: 100px 0;
-    width: 60%;
-    font-family: 'Raleway', sans-serif;
-}
-
 .modal-body {
     padding: 40px 54px 0;
 }
@@ -15,16 +9,39 @@
 
 .profile-image-modal-header {
     height: auto;
-    padding: 32px 54px;
+    padding: 25px 54px;
     background-color: white;
 }
 
 .profile-image-modal-header .close {
     color: #aaaaaa;
-    margin-top: -15px;
+    margin-top: -18px;
     font-size: 3em;
 }
 
 .set-facebook-activity .close {
     margin-top: -45px;
+}
+
+#profile_image_upload_modal .modal-dialog{
+    max-width: 610px;
+    height: auto;
+}
+
+@media (max-width: 767px) {
+    #profile_image_upload_modal .modal-dialog{
+        width: 95%;
+    }
+    #profile_image_upload_modal .modal-body{
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+
+#profile_image_upload_modal .modal-footer{
+    padding: 15px 0;
+}
+
+.image-field{
+    margin-top: 10px;
 }
