[Bug Fixed]: Profile Image Modal Design slight change

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1015,7 +1015,7 @@ textarea#company-short-bio{
 }
 
 .display-inline-block {
-  display : inline-block;
+  display : inline-block !important;
 }
 
 .remove-both-margin {
