[Bug Fixed]: Pagination Added in Offers and Message Page

--- a/app/views/explores/_explores.erb
+++ b/app/views/explores/_explores.erb
@@ -24,7 +24,9 @@
   <% end %>
 </div>
 
-<%= paginate influencers %>
+<div class="pagination-center-align">
+  <%= paginate influencers %>
+</div>
 
 <script type="text/javascript">
     $(document).ready(function() {
