--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -47,6 +47,10 @@
 
 </div>
 
+<div class="pagination-center-align">
+  <%= paginate @offers %>
+</div>
+
 <script>
     $(function () {
         <% if params[:offer_id] %>
